--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ body {
   align-items: center;
   flex-direction: column;
   padding: 10px;
-  position: relative;
 }
 
 label {
@@ -30,6 +29,7 @@ label {
 
 input {
   height: 30px;
+  padding: 5px;
   border-radius: 4px;
   border: none;
   transition: 0.5s ease-in-out;
@@ -58,11 +58,18 @@ button:hover {
   transition: 0.5s ease-in-out;
 }
 
+#reset {
+  position: absolute;
+  top: 50px;
+}
+
 #result {
   font-size: 20px;
+  margin-top: 10px;
   font-weight: 600;
   color: rgba(255, 0, 0, 0.605);
   text-transform: uppercase;
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
